# isilon_stat_browser

./: .gitignore  LICENSE  Makefile  README.md  build_stat_browser.py  hexaparse.py  proxy_server.py  pyproject.toml  requirements.txt  stat_browser.py
stat_key_browser/: browser_builder.py  categorizer.py  cluster_config.py  key_collector.py  mapper.py  search_terms.py  tagger.py
templates/: app_template.html
web_app/css/: bootstrap.css  bootstrap.min.css  style.css
web_app/js/: app_papi_link.js  jquery.typewatch.js
