[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isilon-stat-browser"
version = "0.1.0"
description = "Browser for PowerScale/Isilon OneFS statistics via PAPI"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "jinja2>=2.8",
    "future>=0.15.2",
    "urllib3>=1.15",
]

[tool.pytest.ini_options]
addopts = "-v"

[tool.coverage.run]
branch = true
source = ["stat_key_browser"]
